# Rex3D

./: CMakeLists.txt  LICENSE
include/: camera.h  model.h
include/math/: math.h  matrix.h  vec.h
include/utils/: io.h  ref.h  str.h
src/: camera.c  model.c  tron.c
src/math/: matrix.c  vec.c
src/utils/: ref.c  str.c
